# python-project-52

./: .coverage  .env  .flake8  .gitignore  Makefile  README.md  my_rollbar.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml
locale/ru/LC_MESSAGES/: django.po
task_manager/: settings.py  tests.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: urls.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: delete_label.html  labels_list.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: delete_status.html  statuses_index.html
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templates/tasks/: delete_task.html  tasks_list.html
task_manager/templates/: base.html  delete_confirmation_form.html
task_manager/users/: urls.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: delete_user.html  userlist.html
