[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager Django app"
authors = ["Vol'nov Kirill <volnov-93@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
django = "4.0.5"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-bootstrap5 = "^23.3"
django-filter = "^23.2"
rollbar = "^0.16.3"
flake8 = "^5.0.4"
coverage = "^7.3.1"
distro-info = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
